# orc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-12T22-49-17-406Z.yml  page-2026-05-12T22-51-54-530Z.yml  page-2026-05-13T14-25-01-562Z.yml  page-2026-05-13T14-42-05-208Z.yml  page-2026-05-13T17-16-40-340Z.yml  page-2026-05-13T17-23-49-967Z.yml  page-2026-05-18T03-39-03-744Z.yml
benchmarks/: README.md
benchmarks/bundle_invariants/: run.py
benchmarks/citation_enforcement/: dataset.yaml  run.py
benchmarks/faithfulness/: bootstrap.py  run.py  variants.py
demos/: verify_critique_claims.md
docs/benchmarks/: plan.md  results-2026-05-18-faithfulness.md  results-2026-05-18-judgment-mode.md  results-2026-05-18-lynx-style.md  results-2026-05-19-multi-model.md  results-2026-05-19-phase2-arithmetic.md  results-2026-05-19-source-routed.md
docs/business/: cost-economics.md  roadmap.md
docs/compliance/: eu-ai-act.md
docs/design/: 0001-isolated-write-paths.md
docs/pitch/: orc-how-it-works.html  orc-vc-pitch.html
docs/positioning/: competitive.md
docs/superpowers/plans/: 2026-06-12-orc-eval-tiered-verification.md
docs/superpowers/specs/: 2026-06-12-orc-eval-tiered-verification-design.md
site/: index-marketing.html  index.html  trace.css  trace.js  vercel.json
site/compliance/: index.html
src/orc/: __main__.py  cli.py  config.py  errors.py  paths.py
src/orc/audit/: __init__.py  export.py
src/orc/cli_commands/: _shared.py  approve.py  audit.py  eval_cmd.py  execute.py  ingest.py  mcp.py  propose.py  replay.py  report.py  research.py  search.py  trace.py  verify.py  worker.py  workspace.py
src/orc/core/: clock.py  ids.py
src/orc/directives/: __init__.py  base.py
src/orc/directives/research/: __init__.py  manifest.yaml  routing.py
src/orc/effects/: __init__.py  action.py  base.py  registry.py  run.py  worker.py
src/orc/effects/builtin/: __init__.py  fs_write.py  gmail.py
src/orc/eval/: __init__.py  calibrate.py  gold.py  policy.py  runner.py
src/orc/ingest/: chunker.py  loaders.py  pipeline.py
src/orc/llm/: __init__.py  agentic.py  cache.py  client.py  models.py
src/orc/llm/prompts/: decompose_claim.md  extract_claims.md  research_topic.md  verify_claim.md  verify_claim_arithmetic.md  verify_claim_binary.md  verify_claim_judgment.md
src/orc/llm/tools/: __init__.py  calculate.py
src/orc/mcp/: __init__.py  server.py
src/orc/metrics/: __init__.py  calibration.py  scoring.py
src/orc/orchestrate/: __init__.py  workflow.py
src/orc/queue/: __init__.py  approval.py
src/orc/rendering/: __init__.py  trace_html.py
src/orc/rendering/assets/: __init__.py  trace.css  trace.js
src/orc/retrieval/: __init__.py  bm25.py  embedder.py  hybrid.py
src/orc/runs/: __init__.py  replay.py  runner.py  trace_schema.py
src/orc/storage/: db.py  embeddings_store.py  schema.sql  trace_store.py  workspace.py
tests/: _fake_embedder.py  _fake_llm.py  conftest.py
tests/e2e/: test_mcp_smoke.py
tests/fixtures/: claims.yaml
tests/fixtures/test_corpus/: cli.md  directives.md  ingest.md  mcp_server.md  traces.md  verification.md  workspaces.md
tests/golden/: test_verify_known_claims.py
tests/unit/: test_adding_directive.py  test_agentic.py  test_approval_execution.py  test_approval_queue.py  test_audit_export.py  test_bm25.py  test_calculate.py  test_calibrate.py  test_chunker.py  test_cli_shared.py  test_client_determinism.py  test_conftest_guard.py  test_directive_registry.py  test_effects_action.py  test_effects_executor.py  test_effects_gmail.py  test_embedder.py  test_embeddings_store.py  test_eval_cli.py  test_eval_runner.py  test_execute_cli.py  test_extract_and_research.py  test_gold_store.py  test_hybrid.py  test_ingest_embeddings.py  test_ingest_pipeline.py  test_llm_cache.py  test_loaders.py  test_metrics_calibration.py  test_metrics_scoring.py  test_orchestrate.py  test_paths.py  test_propose_cli.py  test_replay.py  test_report_cli.py  test_review_fixes.py  test_routing.py  test_run_context.py  test_run_propose.py  test_schema_migration.py  (+12 more)
(+7 files in other folders)
