[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orc"
version = "0.1.0"
description = "Headless directive runtime for evidence-grounded research and claim verification"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thor Matthiasson", email = "thormatt@gmail.com" },
]
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.0",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "rich>=13.0",
    "python-ulid>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
embeddings = ["sqlite-vec>=0.1.6"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
orc = "orc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]

[tool.hatch.build.targets.sdist]
include = ["src/orc", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
