[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orc"
version = "0.1.4"
description = "The verification runtime for AI that has to be defensible. Evidence-bound claim verification, structured citations, trace + replay, MCP-ready CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Thor Matthiasson", email = "thormatt@gmail.com" },
]
keywords = [
    "ai", "llm", "verification", "claim-verification", "rag",
    "mcp", "anthropic", "claude", "agents", "audit", "trace",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.0",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "rich>=13.0",
    "python-ulid>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
embeddings = ["sqlite-vec>=0.1.6"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Heavyweight, optional. Required only by `benchmarks/faithfulness/` which
# downloads the HaluBench subsample and self-hosts HHEM-2.1-Open for the
# comparable head-to-head. Install with `uv sync --extra benchmarks`.
benchmarks = [
    "datasets>=2.16",
    "transformers>=4.40",
    "torch>=2.2",
]

[project.scripts]
orc = "orc.cli:main"

[project.urls]
Homepage      = "https://github.com/Thormatt/orc"
Repository    = "https://github.com/Thormatt/orc"
Issues        = "https://github.com/Thormatt/orc/issues"
Changelog     = "https://github.com/Thormatt/orc/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/orc"]

[tool.hatch.build.targets.sdist]
include = [
    "src/orc",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
